--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
     <title>Foods</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-
-        <script src="script.js"></script>
+    <div class="container">
+        <!-- section1 -->
+        <section class="section-1">
+            <h1 class="section-heading">
+                Variety of Foods
+            </h1>
+            <div class="section-1-icons">
+                <i class="fas fa-egg"></i>
+                <i class="fas fa-stroopwafel"></i>
+                <i class="fas fa-cheese"></i>
+                <i class="fas fa-hotdog"></i>
+                <i class="fas fa-drumstick-bite"></i>
+                <i class="fas fa-apple-alt"></i>
+                <i class="fas fa-ice-cream"></i>
+                <i class="fas fa-fish"></i>
+                <i class="fas fa-cookie"></i>
+                <i class="fas fa-seedling"></i>
+            </div>
+        </section>
+    </div>
+        
 </body>
 </html>
