--- a/index.html
+++ b/index.html
@@ -51,6 +51,44 @@
                 </div>
             </div>
         </section>
+         <!-- section3 -->
+         <section class="section-3">
+            <h1 class="section-heading">
+                gallery
+            </h1>
+            <div class="gallery">
+                <a href="#" class="gallery-link" title="order now">
+                    <img class="food-img" src="./images/gallery-img-1.jpg" alt="">
+                    <h3 class="food-name">Pancakes</h3>
+                    <p class="food-description"> aliquid in harum, at soluta dignissimos.</p>
+                </a>
+                <a href="#" class="gallery-link" title="order now">
+                    <img class="food-img" src="./images/gallery-img-2.jpg" alt="">
+                    <h3 class="food-name">Pancakes</h3>
+                    <p class="food-description"> aliquid in harum, at soluta dignissimos.</p>
+                </a>
+                <a href="#" class="gallery-link" title="order now">
+                    <img class="food-img" src="./images/gallery-img-3.jpg" alt="">
+                    <h3 class="food-name">Pancakes</h3>
+                    <p class="food-description"> aliquid in harum, at soluta dignissimos.</p>
+                </a>
+                <a href="#" class="gallery-link" title="order now">
+                    <img class="food-img" src="./images/gallery-img-4.jpg" alt="">
+                    <h3 class="food-name">Hambugers</h3>
+                    <p class="food-description"> aliquid in harum, at soluta dignissimos.</p>
+                </a>
+                <a href="#" class="gallery-link" title="order now">
+                    <img class="food-img" src="./images/gallery-img-5.jpg" alt="">
+                    <h3 class="food-name">Salmon</h3>
+                    <p class="food-description"> aliquid in harum, at soluta dignissimos.</p>
+                </a>
+                <a href="#" class="gallery-link" title="order now">
+                    <img class="food-img" src="./images/gallery-img-6.jpg" alt="">
+                    <h3 class="food-name">Vegetables</h3>
+                    <p class="food-description"> aliquid in harum, at soluta dignissimos.</p>
+                </a>
+            </div>
+        </section>
     </div>
         
 </body>
