--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
                 </a>
             </div>
         </section>
+        <!-- section4 -->
+        <section class="section-4">
+            <div class="section-4-text">
+                <h2 class="section-4-heading">Sign Me Up</h2>
+                <p class="section-5-paragraph">
+                    Be the first to know about new prducts
+                </p>
+            </div>
+        </section>
     </div>
         
 </body>
