--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar target">
+        <a href="" class="navbar-link">
+            <i class="fas fa-home"></i>
+            <span>Meals</span>
+        </a>
+        <a href="" class="navbar-link">
+            <i class="fas fa-utensils"></i>
+            <span>Home</span>
+        </a>
+        <a href="" class="navbar-link">
+            <i class="fas fa-hamburger"></i>
+            <span>Hambuger</span>
+        </a>
+        <a href="" class="navbar-link">
+            <i class="fas fa-pizza-slice"></i>
+            <span>Pizza</span>
+        </a>
+        <a href="" class="navbar-link">
+            <i class="fas fa-blender"></i>
+            <span>Contact</span>
+        </a>
+    </nav>
+    <div class="menu target"></div>
+    <!-- end of navbar -->
     <div class="container">
         <!-- section1 -->
         <section class="section-1">
@@ -93,10 +118,19 @@
         <section class="section-4">
             <div class="section-4-text">
                 <h2 class="section-4-heading">Sign Me Up</h2>
-                <p class="section-5-paragraph">
+                <p class="section-4-paragraph">
                     Be the first to know about new prducts
                 </p>
             </div>
+            <form action="" class="signup-form">
+                <input class="signup-form-input" type="email" placeholder="Enter Your Email">
+                <button type="submit" class="signup-form-btn">
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+            </form>
+            <p class="copyright">
+                CodeAndCreate &copy; All Rights Reserved 
+            </p>
         </section>
     </div>
         
